syntax = "proto2";

package org.graylog.integrations.ipfix;

// to regenerate:
// install protobuf compiler (you can find the version that was used to generate the current java code in the preamble of the generated classes)
// protoc --java_out=src/main/java src/main/resources/ipfix_journal.proto

option java_package = "org.graylog.integrations.ipfix";
option java_outer_classname = "IpfixJournal";

message RawIpfix {
    // all applicable templates that are referenced by the data sets
    map<uint32, bytes> templates = 1;
    // all applicable options templates that are references by the data sets
    map<uint32, bytes> optionTemplates = 2;
    repeated DataSet dataSets = 3;
}

message DataSet {
    required uint64 timestampEpochSeconds = 1;
    required uint32 templateId = 2;
    required bytes dataRecords = 3;

}
